# rust_experiments

./: README.md
closures/src/: cities.rs  fns.rs  kill.rs  main.rs  router.rs  router_fn.rs
collections/src/: main.rs  vec.rs
crates_and_modules/: Cargo.toml
crates_and_modules/src/: another.rs  main.rs  tests.rs
crates_and_modules/src/plant_structures/: leaves.rs  mod.rs
crates_and_modules/tests/: integration.rs
dungeoncrawl/: Cargo.toml
dungeoncrawl/resources/: template.ron
dungeoncrawl/src/: camera.rs  components.rs  main.rs  map.rs  map_builder.rs  player.rs  spawner.rs
dungeoncrawl/src/map_builder/: automata.rs  drunkard.rs  empty.rs  mod.rs  prefab.rs  rooms.rs
enums/src/: http.rs  json.rs  main.rs  timeunit.rs  trees.rs  variants.rs
error_handling/src/: main.rs
expressions/src/: main.rs
fern_sim/src/: lib.rs
flappy/: Cargo.toml
flappy/src/: main.rs  obstacle.rs  player.rs  state.rs
fundamental_types/src/: main.rs
iterators/: Cargo.toml
iterators/src/: binarytree.rs  i32range.rs  main.rs  narcissistic.rs  pipeline.rs  ranges.rs  str.rs  terminal.rs  vector.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
operators/: Cargo.toml
operators/src/: indexes.rs  intervals.rs  main.rs  operators.rs
ownership_and_moves/src/: main.rs
quickreplace/: .gitignore
quickreplace/src/: main.rs
ranges/src/: lib.rs
references/src/: main.rs
structs/src/: broom.rs  main.rs
traits/src/: dot.rs  main.rs  my_trait.rs
treehouse/src/: main.rs
utility/src/: appellation.rs  copy.rs  main.rs  selector.rs  sized.rs
(+20 files in other folders)
